tests/typing/bad/testfile-nil-2.go
package main

func main() { var l = nil }
